# osquery-extensions

./: CMakeLists.txt
probes/: CMakeLists.txt  common.h  types.h
probes/execve/: main.c
src/: main.cpp
